lib_LTLIBRARIES = libtdms.la

libtdms_la_SOURCES = TdmsChannel.cpp TdmsGroup.cpp TdmsLeadIn.cpp TdmsMetaData.cpp TdmsObject.cpp TdmsParser.cpp

include_HEADERS = include/endianfstream.hh include/TdmsChannel.h include/TdmsGroup.h include/TdmsLeadIn.h include/TdmsListener.h include/TdmsMetaData.h include/TdmsObject.h include/TdmsParser.h

AM_CXXFLAGS = -Iinclude

ACLOCAL_AMFLAGS = -I m4